[tool.poetry]
name = "identifier"
version = "0.1.0"
description = ""
authors = ["Thiago Pacheco <thiagodelimapacheco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
